avoid overflow issue on cards

--- a/src/subpages/project/projectsSubpg.scss
+++ b/src/subpages/project/projectsSubpg.scss
@@ -45,6 +45,7 @@
 
   .swiper-slide {
     transition: filter 0.6s ease-in-out;
+    overflow: visible;
   }
 
   .swiper-slide-prev,
